--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "wx-message",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.0",
+    "@tauri-apps/api": "^1.3.0",
+    "@types/lodash": "^4.14.194",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "antd": "^5.5.0",
     "autoprefixer": "10.4.14",
+    "dayjs": "^1.11.7",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "lodash": "^4.17.21",
+    "lottie-web": "^5.11.0",
     "next": "13.4.3",
     "postcss": "8.4.23",
+    "rc-virtual-list": "^3.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
+    "tauri-plugin-log-api": "github:tauri-apps/tauri-plugin-log",
+    "tauri-plugin-websocket-api": "github:tauri-apps/tauri-plugin-websocket",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@tauri-apps/cli": "^1.3.1"
   }
 }
