--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "postcss": "8.4.23",
     "rc-virtual-list": "^3.5.2",
     "react": "18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "tauri-plugin-log-api": "github:tauri-apps/tauri-plugin-log",
-    "tauri-plugin-websocket-api": "github:tauri-apps/tauri-plugin-websocket",
+    "tauri-plugin-store-api": "^0.0.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
