--- a/package.json
+++ b/package.json
@@ -3,18 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "tauri": "tauri"
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.0",
     "@tauri-apps/api": "^1.3.0",
-    "@types/lodash": "^4.14.194",
-    "@types/node": "20.2.1",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
     "antd": "^5.5.0",
     "autoprefixer": "10.4.14",
     "dayjs": "^1.11.7",
@@ -22,18 +18,25 @@
     "eslint-config-next": "13.4.3",
     "lodash": "^4.17.21",
     "lottie-web": "^5.11.0",
-    "next": "13.4.3",
-    "postcss": "8.4.23",
     "rc-virtual-list": "^3.5.2",
     "react": "18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
+    "react-router": "6",
+    "react-router-dom": "6",
     "tauri-plugin-log-api": "github:tauri-apps/tauri-plugin-log",
-    "tauri-plugin-store-api": "^0.0.0",
-    "typescript": "5.0.4"
+    "tauri-plugin-store-api": "^0.0.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.3.1"
+    "@tauri-apps/cli": "^1.3.1",
+    "@types/lodash": "^4.14.194",
+    "@types/node": "^18.7.10",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^3.0.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.2",
+    "typescript": "5.0.4",
+    "vite": "^4.2.1"
   }
 }
