--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,12 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.3.0", features = ["api-all"] }
 tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
+websocket = "0.26.5"
+proto = {path="../proto"}
+anyhow = "1.0"
+thiserror = "1.0"
+protobuf = "3.2.0"
+dashmap = "5.4.0"
 
 [dependencies.uuid]
 version = "1.3.3"
