--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,6 +26,7 @@ anyhow = "1.0"
 thiserror = "1.0"
 protobuf = "3.2.0"
 dashmap = "5.4.0"
+tokio = "1.28.2"
 
 [dependencies.uuid]
 version = "1.3.3"
