--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,12 @@
     "rust-analyzer.linkedProjects": [
         "./src-tauri/Cargo.toml",
     ],
-    "rust-analyzer.showUnlinkedFileNotification": false
+    "rust-analyzer.showUnlinkedFileNotification": false,
+    "cSpell.words": [
+        "dashmap",
+        "proto",
+        "protobuf",
+        "tauri",
+        "thiserror"
+    ]
 }
