--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,7 +26,7 @@ anyhow = "1.0"
 thiserror = "1.0"
 protobuf = "3.2.0"
 dashmap = "5.4.0"
-tokio = "1.28.2"
+tokio = {version = "1.28.2", features = ["rt", "rt-multi-thread", "time", "macros", "full"] } 
 log = "0.4"
 
 [dependencies.uuid]
