--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,6 +28,7 @@ protobuf = "3.2.0"
 dashmap = "5.4.0"
 tokio = {version = "1.28.2", features = ["rt", "rt-multi-thread", "time", "macros", "full"] } 
 log = "0.4"
+async-recursion = "1.0.4"
 
 [dependencies.uuid]
 version = "1.3.3"
