完成基本对接

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
         "proto",
         "protobuf",
         "tauri",
-        "thiserror"
+        "thiserror",
+        "wechat",
+        "wxuser"
     ]
 }
