--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", br
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 websocket = "0.26.5"
 proto = {path="../proto"}
+conn = {path="../conn"}
 anyhow = "1.0"
 thiserror = "1.0"
 protobuf = "3.2.0"
