--- a/conn/Cargo.toml
+++ b/conn/Cargo.toml
@@ -11,3 +11,4 @@ chrono = "0.4.26"
 tokio = {version = "1.28.2", features = ["rt", "rt-multi-thread", "time", "macros", "full"] } 
 tokio-test = "0.4.2"
 async-trait = "0.1.68"
+thiserror = "1.0"
