--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,7 +21,7 @@ tauri = { version = "1.3.0", features = ["api-all"] }
 tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 websocket = "0.26.5"
-proto = {path="../crate_modules/proto"}
+proto = {path="./src/modules/proto"}
 conn = {path="../crate_modules/conn"}
 promise = {path="../crate_modules/promise"}
 anyhow = "1.0"
