将背景改为毛玻璃, 提交httpclient

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "rust-analyzer.showUnlinkedFileNotification": false,
     "cSpell.words": [
         "dashmap",
+        "fullscreen",
         "proto",
         "protobuf",
         "tauri",
