--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.3.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.3.0", features = ["api-all"] }
+tauri = { version = "1.3.0", features = ["api-all", "macos-private-api"] }
 tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 websocket = "0.26.5"
@@ -31,6 +31,7 @@ dashmap = "5.4.0"
 tokio = {version = "1.28.2", features = ["rt", "rt-multi-thread", "time", "macros", "full"] } 
 log = "0.4"
 async-recursion = "1.0.4"
+window-vibrancy = "0.4.0"
 
 [dependencies.uuid]
 version = "1.3.3"
@@ -44,4 +45,4 @@ features = [
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
 # If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
 # DO NOT REMOVE!!
-custom-protocol = [ "tauri/custom-protocol" ]
+custom-protocol = ["tauri/custom-protocol"]
