--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,13 @@
     ],
     "rust-analyzer.showUnlinkedFileNotification": false,
     "cSpell.words": [
+        "APPCACHE",
+        "APPDATA",
+        "APPLOCALDATA",
         "dashmap",
+        "dragbar",
         "fullscreen",
+        "Iconfont",
         "proto",
         "protobuf",
         "tauri",
