--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.0",
+    "@tanstack/react-query": "^4.29.23",
     "@tauri-apps/api": "^1.3.0",
+    "@types/react-transition-group": "^4.4.6",
     "antd": "^5.5.0",
     "autoprefixer": "10.4.14",
+    "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
@@ -23,10 +26,13 @@
     "react": "18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router": "6",
     "react-router-dom": "6",
+    "react-transition-group": "^4.4.5",
     "tauri-plugin-log-api": "github:tauri-apps/tauri-plugin-log",
-    "tauri-plugin-store-api": "^0.0.0"
+    "tauri-plugin-store-api": "^0.0.0",
+    "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.3.1",
