--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,8 +22,7 @@ tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", br
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 websocket = "0.26.5"
 proto = {path="./src/modules/proto"}
-conn = {path="../crate_modules/rs-connections"}
-promise = {path="../crate_modules/promise"}
+simulate-promise = "1.0.0"
 anyhow = "1.0"
 thiserror = "1.0"
 protobuf = "3.2.0"
@@ -32,6 +31,7 @@ tokio = {version = "1.28.2", features = ["rt", "rt-multi-thread", "time", "macro
 log = "0.4"
 async-recursion = "1.0.4"
 window-vibrancy = "0.4.0"
+rs-connections = "0.1.0"
 
 [dependencies.uuid]
 version = "1.3.3"
